--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "http://139.180.157.75:5001"
 }
